# oanda-rs

./: .gitignore  .rustfmt.toml  Cargo.toml
src/: client.rs  lib.rs  macros.rs  request.rs  serdes.rs  traits.rs
src/models/: account.rs  candlesticks.rs  globals.rs  instruments.rs  mod.rs  price.rs
src/requests/: account.rs  mod.rs
src/response/: account.rs  instrument.rs  mod.rs  price.rs
